feat(main): free trial

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button>Inizia la tua prova gratuita</button>
                         <p class="margin-bottom-2">Annulla in qualsiasi momento</p>
-                        <a href="#plans"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
+                        <a href="#free-trial"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
                     </div>
                     <div class="width70">
                         <img src="./img/jumbo.png" alt="jumbo" class="jumbo">
@@ -50,7 +50,7 @@
         </div>
 
         <!-- PLANS -->
-        <div class="boxed" id="plans">
+        <div class="boxed">
             <h2 class="margin-top-402">Trova il piano business che fa per te</h2>
             <input type="checkbox" name="Fatturazione mensile"> <label>Fatturazione mensile</label> 
             <input type="checkbox" name="Fatturazione annuale"> <label>Fatturazione annuale</label> 
@@ -259,42 +259,46 @@
         </div>
 
         <!-- PROVA GRATUITA -->
-        <div class="boxed">
-            <div class="flex justifify-between container-team">
-                <div class="width70">
-                    <h3>Enterprise</h3>
-                    <strong>Contatta l'ufficio vendite per i prezzi</strong><br>
-                    <span>Soluzione personalizzate e supporto su misura per aiutare professionisti IT nella gestione su qualsiasi scala.</span><br>
-                </div>
-                <div class="width30">
-                    <button>Contatta l'ufficio vendite</button>
+        <div class="free-trial" id="free-trial">
+            <div class="boxed">
+                <div class="container-team">
+                    <div class="flex justify-center width60">
+                        <h2 class="bordeaux">Porta Dropbox Business nella tua azienda.</h2>
+                    </div>
+                    <div class="flex justify-center width30">
+                        <button id="button-free-trial">Inizia la prova gratuita</button>
+                    </div>
                 </div>
             </div>
         </div>
 
+
         <!-- FAQ -->
         <div class="boxed margin-top-2">
-            <h2>Domande frequenti</h2>
-            
-            <hr class="margin-top-2">
-            <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
-                <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
-                <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
-                <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+            <div class="container-faq">
+                <h2>Domande frequenti</h2>
+                
+                <hr class="margin-top-2">
+                <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
+                    <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                    <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
+                    <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+                </div>
+                <hr class="margin-top-2">
+                <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
+                    <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                    <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
+                    <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+                </div>
+                <hr class="margin-top-2">
+                <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
+                    <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                    <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
+                    <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+                </div>
+                <hr class="margin-top-2">
             </div>
-            <hr class="margin-top-2">
-            <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
-                <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
-                <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
-                <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
-            </div>
-            <hr class="margin-top-2">
-            <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
-                <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
-                <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
-                <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
-            </div>
-            <hr class="margin-top-2">
+
         </div>
     </main>
 
