fix(main): name class container free trial

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <!-- PROVA GRATUITA -->
         <div class="free-trial" id="free-trial">
             <div class="boxed">
-                <div class="container-team">
+                <div class="container-free-trial">
                     <div class="flex justify-center width60">
                         <h2 class="bordeaux">Porta Dropbox Business nella tua azienda.</h2>
                     </div>
