feat(main): faq

--- a/index.html
+++ b/index.html
@@ -276,29 +276,27 @@
         <!-- FAQ -->
         <div class="boxed margin-top-2">
             <div class="container-faq">
-                <h2>Domande frequenti</h2>
-                
+                <h2>Domande frequenti</h2> 
                 <hr class="margin-top-2">
-                <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
-                    <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                <div class="padding-1 margin-top-2 margin-bottom-2 faq">
+                    <span><strong>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></span> 
                     <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
-                    <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+                    <p class="answer margin-top-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
                 </div>
                 <hr class="margin-top-2">
-                <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
-                    <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                <div class="padding-1 margin-top-2 margin-bottom-2 faq">
+                    <span><strong>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></span> 
                     <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
-                    <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+                    <p class="answer margin-top-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
                 </div>
                 <hr class="margin-top-2">
-                <div class="flex justify-between padding-1 margin-top-2 margin-bottom-2">
-                    <h3>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3> 
+                <div class="padding-1 margin-top-2 margin-bottom-2 faq">
+                    <span><strong>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></span> 
                     <a><i class="fa-solid fa-angle-down faq-arrow"></i></a>
-                    <p class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
+                    <p class="answer margin-top-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore maxime ab modi soluta atque, iure a veritatis fugit optio! Ut minima magni corporis maiores asperiores odio error quas quam?</p>
                 </div>
                 <hr class="margin-top-2">
             </div>
-
         </div>
     </main>
 
