--- a/index.html
+++ b/index.html
@@ -300,51 +300,51 @@
         </div>
     </main>
 
-    <footer class="bg-black margin-top-2">
+    <footer class="bg-black margin-top-2 padding-2">
         <div class="flex justify-between wrap boxed-footer white">
             <div>
                 <ul>
                     <li><h3>Dropbox</h3></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
+                    <li><a href="#"><h5>Applicazione desktop</h5></li></a>
+                    <li><a href="#"><h5>Perché Dropbox</h5></li></a>
+                    <li><a href="#"><h5>Piani</h5></li></a>
+                    <li><a href="#"><h5>Sicurezza</h5></li></a>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <li><h3>Dropbox</h3></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h3>Prodotti</h3></li>
+                    <li><a href="#"><h5>Applicazione desktop</h5></li></a>
+                    <li><a href="#"><h5>Perché Dropbox</h5></li></a>
+                    <li><a href="#"><h5>Piani</h5></li></a>
+                    <li><a href="#"><h5>Sicurezza</h5></li></a>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <li><h3>Dropbox</h3></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h3>Azienda</h3></li>
+                    <li><a href="#"><h5>Applicazione desktop</h5></li></a>
+                    <li><a href="#"><h5>Perché Dropbox</h5></li></a>
+                    <li><a href="#"><h5>Piani</h5></li></a>
+                    <li><a href="#"><h5>Sicurezza</h5></li></a>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <li><h3>Dropbox</h3></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h3>Supporto</h3></li>
+                    <li><a href="#"><h5>Applicazione desktop</h5></li></a>
+                    <li><a href="#"><h5>Perché Dropbox</h5></li></a>
+                    <li><a href="#"><h5>Piani</h5></li></a>
+                    <li><a href="#"><h5>Sicurezza</h5></li></a>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <li><h3>Dropbox</h3></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
-                    <li><h5>Applicazione desktop</h5></li>
+                    <li><h3>Community</h3></li>
+                    <li><a href="#"><h5>Applicazione desktop</h5></li></a>
+                    <li><a href="#"><h5>Perché Dropbox</h5></li></a>
+                    <li><a href="#"><h5>Piani</h5></li></a>
+                    <li><a href="#"><h5>Sicurezza</h5></li></a>
                 </ul>
             </div>
         </div>
@@ -352,7 +352,7 @@
             <div>
                 <hr class="boxed-short">
                 <br>
-                <i class="fa-solid fa-earth-americas lightgray"></i> <span class="lightgray">Italian
+                <a href="#"><i class="fa-solid fa-earth-americas lightgray"></i> <span class="lightgray">Italian</a>
             </div>
         </div>
     </footer>
