fix(main): plans

--- a/index.html
+++ b/index.html
@@ -68,24 +68,24 @@
                             <li><strong>€ 12.00</strong></li>
                             <li><small>/mese</small></li>
                             <br>
-                            <li><i class="fa-solid fa-user-large"></i> <span>1 utente</span></li>
-                            <li><i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span></li>
-                            <li><i class="fa-solid fa-share-nodes"></i> <span> Funzioni di produttività premium e condivisione file semplice e sicura</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-user-large"></i> <span>1 utente</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-folder"></i> <span>5 TB di spazio di archivazione sicuro</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-share-nodes"></i> <span>Funzioni di produttività premium e condivisione file semplice e sicura</span></li>
                             <br>
                             <li><button class="button-plans">Prova gratis per 30 giorni</button></li>
                             <br>
-                            <li><span>oppure</span> <a href="#">acquista ora</a></li>
-                            <hr class="boxed-short">
+                            <li><span>oppure</span> <a href="#" class="link-underline">acquista ora</a></li>
+                            <hr class="boxed-short-plans">
                             <li><h4>Punti salienti del giorno</h4></li>
                             <br>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span></li>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispositivi mobili</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Invia file fino a 100 GB con Dropbox Transfert</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispositivi mobili</span></li>
                         </ul>
                     </div>
                 </div>
                 <div class="width30 border height-colomn-plans">
                     <div class="text-center border-only-bottom padding-05">
-                        <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
+                        <i class="fa-solid fa-people-group"></i> <span>Team</span>
                     </div>
                     <div class="padding-plans black">
                         <ul>
@@ -93,27 +93,27 @@
                             <li><strong>€ 18.00</strong></li>
                             <li><small>/utente/mese</small></li>
                             <br>
-                            <li><i class="fa-solid fa-user-large"></i> <span>3 o più utenti</span></li>
-                            <li><i class="fa-solid fa-folder"></i> <span>Tutto lo spazio di cui ha bisogno il team</span></li>
-                            <li><i class="fa-solid fa-share-nodes"></i> <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-people-group"></i> <span>3 o più utenti</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-folder"></i> <span>Tutto lo spazio di cui ha bisogno il team</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-share-nodes"></i> <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span></li>
                             <br>
                             <li><button class="button-plans">Prova gratis per 30 giorni</button></li>
                             <br>
-                            <li><span>oppure</span> <a href="#">acquista ora</a></li>
-                            <hr class="boxed-short">
+                            <li><span>oppure</span> <a href="#" class="link-underline">acquista ora</a></li>
+                            <hr class="boxed-short-plans">
                             <li><h4>Punti salienti del giorno</h4></li>
                             <br>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Nessun limite di spazio per i file</span></li>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispositivi mobili</span></li>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Risparmio del 50% sulle iscrizioni singole</span></li>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Possibilità di inserire nuovi membri del team</span></li>
-                            <li><i class="fa-solid fa-check azure"></i> <span>Gestione dei permessi in base ai ruoli</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Nessun limite di spazio per i file</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispositivi mobili</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Risparmio del 50% sulle iscrizioni singole</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Possibilità di inserire nuovi membri del team</span></li>
+                            <li class="flex gap-plan" class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Gestione dei permessi in base ai ruoli</span></li>
                         </ul>
                     </div>
                 </div>
                 <div class="width30 border height-colomn-plans">
                     <div class="text-center border-only-bottom padding-05">
-                        <i class="fa-solid fa-user-large"></i> <span>Singolo</span>
+                        <i class="fa-solid fa-building"></i> <span>Azienda</span>
                     </div>
                     <div class="padding-plans black">
                         <ul>
@@ -121,19 +121,19 @@
                             <li><strong>Contattaci</strong></li>
                             <li><small>-</small></li>
                             <br>
-                            <li><i class="fa-solid fa-user-large"></i> <span>10 o più utenti</span></li>
-                            <li><i class="fa-solid fa-folder"></i> <span>Soluzioni personalizzabili per la tua azienda</span></li>
-                            <li><i class="fa-solid fa-share-nodes"></i> <span>Assitenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-user-large"></i> <span>10 o più utenti</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-folder"></i> <span>Soluzioni personalizzabili per la tua azienda</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-share-nodes"></i> <span>Assitenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span></li>
                             <br>
                             <li><button class="button-plans">Contattaci</button></li>
                             <br>
-                            <li><span>oppure</span> <a href="#">acquista ora</a></li>
-                            <hr class="boxed-short">
+                            <li><span>oppure</span> <a href="#" class="link-underline">acquista ora</a></li>
+                            <hr class="boxed-short-plans">
                             <li><h4>Punti salienti del giorno</h4></li>
                             <br>
-                            <li><i class="fa-solid fa-check"></i> <span>Cartelle offline su dispostivi mobili</span></li>
-                            <li><i class="fa-solid fa-check"></i> <span>Servizio assistenza 24/h</span></li>
-                            <li><i class="fa-solid fa-check"></i> <span>Possibilità di personalizzazione totale</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Cartelle offline su dispostivi mobili</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Servizio assistenza 24/h</span></li>
+                            <li class="flex gap-plan"><i class="fa-solid fa-check azure"></i> <span>Possibilità di personalizzazione totale</span></li>
                         </ul>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                 <h2 class="margin-top-402 margin-bottom-05">Più di 500.000 team utilizzano<br>
                     Dropbox Business
                 </h2>
-                <a href="#">Scopri di più sui nostri clienti</a>
+                <a href="#" class="link-underline">Scopri di più sui nostri clienti</a>
             </div>
         </div>
 
@@ -235,7 +235,7 @@
                 </div>
                 <div class="overflowy wrap square-column padding-2">
                     <img src="./img/designit.svg" alt="" class="designit-middle">
-                    <hr class="boxed-short">
+                    <hr class="boxed-short-square">
                     <blockquote>
                         <p>"I membri del nostro team di lavorano constantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono molto compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
                         <footer>Morten Thomsen, Global IT Lead</footer>
@@ -300,7 +300,7 @@
         </div>
     </main>
 
-    <footer class="bg-black margin-top-2 padding-2">
+    <footer class="bg-black margin-top-2 padding-8">
         <div class="flex justify-between wrap boxed-footer white">
             <div>
                 <ul>
@@ -309,6 +309,7 @@
                     <li><a href="#"><h5>Perché Dropbox</h5></li></a>
                     <li><a href="#"><h5>Piani</h5></li></a>
                     <li><a href="#"><h5>Sicurezza</h5></li></a>
+                    <li><a href="#"><h5>Funzioni</h5></li></a>
                 </ul>
             </div>
             <div>
@@ -318,6 +319,7 @@
                     <li><a href="#"><h5>Perché Dropbox</h5></li></a>
                     <li><a href="#"><h5>Piani</h5></li></a>
                     <li><a href="#"><h5>Sicurezza</h5></li></a>
+                    <li><a href="#"><h5>Funzioni</h5></li></a>
                 </ul>
             </div>
             <div>
@@ -327,6 +329,7 @@
                     <li><a href="#"><h5>Perché Dropbox</h5></li></a>
                     <li><a href="#"><h5>Piani</h5></li></a>
                     <li><a href="#"><h5>Sicurezza</h5></li></a>
+                    <li><a href="#"><h5>Funzioni</h5></li></a>
                 </ul>
             </div>
             <div>
@@ -336,6 +339,7 @@
                     <li><a href="#"><h5>Perché Dropbox</h5></li></a>
                     <li><a href="#"><h5>Piani</h5></li></a>
                     <li><a href="#"><h5>Sicurezza</h5></li></a>
+                    <li><a href="#"><h5>Funzioni</h5></li></a>
                 </ul>
             </div>
             <div>
@@ -345,12 +349,13 @@
                     <li><a href="#"><h5>Perché Dropbox</h5></li></a>
                     <li><a href="#"><h5>Piani</h5></li></a>
                     <li><a href="#"><h5>Sicurezza</h5></li></a>
+                    <li><a href="#"><h5>Funzioni</h5></li></a>
                 </ul>
             </div>
         </div>
         <div class="boxed-footer">
             <div>
-                <hr class="boxed-short">
+                <hr class="boxed-short-footer">
                 <br>
                 <a href="#"><i class="fa-solid fa-earth-americas lightgray"></i> <span class="lightgray">Italian</a>
             </div>
