feat(main): radio button

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <!-- PLANS -->
         <div class="boxed">
             <h2 class="margin-top-402">Trova il piano business che fa per te</h2>
-            <input type="checkbox" name="Fatturazione mensile"> <label>Fatturazione mensile</label> 
-            <input type="checkbox" name="Fatturazione annuale"> <label>Fatturazione annuale</label> 
+            <label><input type="radio" name="fatturazione" value="Fatturazione mensile"> Fatturazione mensile</label> 
+            <label><input type="radio" name="fatturazione" value="Fatturazione annuale"> Fatturazione annuale</label> 
         </div>
 
         <div class="boxed">
