fix(main): radio button value

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <!-- PLANS -->
         <div class="boxed">
             <h2 class="margin-top-402">Trova il piano business che fa per te</h2>
-            <label><input type="radio" name="fatturazione" value="Fatturazione mensile"> Fatturazione mensile</label> 
-            <label><input type="radio" name="fatturazione" value="Fatturazione annuale"> Fatturazione annuale</label> 
+            <label><input type="radio" name="fatturazione" value="fatturazione mensile"> Fatturazione mensile</label> 
+            <label><input type="radio" name="fatturazione" value="fatturazione annuale"> Fatturazione annuale</label> 
         </div>
 
         <div class="boxed">
