feat(header): position fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button>Inizia la tua prova gratuita</button>
                         <p class="margin-bottom-2">Annulla in qualsiasi momento</p>
-                        <a href="#free-trial"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
+                        <a href="#plans"><i class="fa-solid fa-arrow-down black" id="arrow-down"></i></a>
                     </div>
                     <div class="width70">
                         <img src="./img/jumbo.png" alt="jumbo" class="jumbo">
@@ -50,7 +50,7 @@
         </div>
 
         <!-- PLANS -->
-        <div class="boxed">
+        <div class="boxed scroll-margin-top" id="plans">
             <h2 class="margin-top-402">Trova il piano business che fa per te</h2>
             <label><input type="radio" name="fatturazione" value="fatturazione mensile"> Fatturazione mensile</label> 
             <label><input type="radio" name="fatturazione" value="fatturazione annuale"> Fatturazione annuale</label> 
@@ -259,7 +259,7 @@
         </div>
 
         <!-- PROVA GRATUITA -->
-        <div class="free-trial" id="free-trial">
+        <div class="free-trial">
             <div class="boxed">
                 <div class="container-free-trial">
                     <div class="flex justify-center width60">
